# codingWithGPT

./: .gitignore  LinusTechPC.md  README.md  autoformatBlack.sh  changeScreenshotNamesIntoImg00Tonn.py  credentialSafetyUsabilityMatrix.py  findAndFixUpperCaseDirectoryNames.py  showAllFoldersWithSpaces.py  video2mp3.sh
AWS_cloud_practicioner_certification_exam_helper/: README.md  app.py  questions.md
AnswerGeist/: README.md  answergeist.py  functional_requirements.md  requirements.txt
CRaST/: CRaST.py  README.md  pyproject.toml
Gitlab_ActivitySummary/: .gitignore  PLAN.md  README.md  README_deep_project_inspection.py  deep_project_inspection.py  main.py  postprocessingprompt.md
Gitlab_Burndown/: .gitignore  README.md  main.py  requirements.txt
Gitlab_JobOverview/: PLAN.md  README.md  main.py  requirements.txt
HTML_filePickerLineEditTest/: indext.htm
HttpRequestSenderAndReceiverTest/: README.md  call-detect_cats.sh  receiver.py  requirements.txt  sender.py  sender_catProcessor.py
MotherOfAllGits/: motherOfAllGits.py
QTestSummer/: qTestSummer.py
QtPrinterFinderExample/: .gitignore  CMakeLists.txt  CROSSCOMPILE.md  README.md  crosscompile.md  crosscompile_input.md  setup-windows-toolchain.sh
QtPrinterFinderExample/cmake/toolchains/: windows-mingw-qt5.cmake
QtPrinterFinderExample/docs/: windows-crosscompile.md
QtPrinterFinderExample/scripts/: deploy-windows.sh  verify-windows-toolchain.sh
QtPrinterFinderExample/src/: PrinterFinderWidget.cpp  PrinterFinderWidget.h  main.cpp
SalesSlipScanner/: README.md  requirements.txt  salesSlipScanner.py
anAgentTriggersAgenticWorkflows/: README.md  review_Cullendula.md  review_Gitlab_Hitparade.md  review_cotli_bot.md  tasks.md  watcher.sh
analyzeGPX/: .gitignore  README.md  analyzeGPX.py  requirements.txt
annualProgress/: README.md  annualProgress.py
annualProgressv2/: annual_progress.py  test_annual_progress.py
azureDevOpsTools/: .gitignore  basicAccessAndScrap.py  chartCreator.py  devopsOutputToPlainOutput.py  getAllOurTickets.py  getUrlsFromChart.py  getUrlsFromOdsChart.py  officialPythonApi.py  requirements.txt
boldemort_markdownToUnicodeConverter/: .gitignore  README.md  agents.md  localPipeline.sh  plan.md  requirements-dev.txt
bonsaiTestrun/: .gitignore  README.md  plan.md
calendaringSlideDeckTestrun/: README.md  linkedin-post.txt
canvas/: canvas.htm
cardGameTest/: index.html  script.js  style.css
catDetector_yolo/: call-detect_cats.sh  catDetector_yolo.py  catDetector_yolo_simplified.py
certificateGenerator/: README.md  config.ini  main.py
checkForMissingCopyright/: checkForMissingCopyright.py
churnVersusComplexity/: README.md  WISHLIST.md  churnVsComplexity.py
churnVersusComplexity_v1/: README.md  churnVsComplexity.py
churnVersusComplexity_v2/: churnVsComplexity.py
clangFormatInvoke/: clangFormatInvoke.sh
cmakeFlags/: .gitignore  CMakeLists.txt  README.md
cmakeFlags/src/: chimera.h  ghost.c  main.c  oracle.c  titan.c
codeOxygenator/: README.md  autoDecorator.py  codeOxygenator.py
codex_and_claude_code_mini_trigger/: README.md  codex_and_claude_code_mini_trigger.desktop  trigger_tools.desktop  trigger_tools.sh
colorPatternGenerator/: colorPatternGenerator.py
complexityVsChurn/: complexityVsChurn.py
convertTextfileForLLama2Input/: convertTextfileForLLama2Input.py  input.md
convertToPng/: README.md  convertToPng.py  requirements.txt  test_convertToPng.py  toPDF.py
copyrightChecker/: copyrightChecker.py
copyrightFixer/: copyrightFixer.py
cppNullptrDeref/: README.md  main.cpp
credentialSafetyUsabilityMatrix/: credentialSafetyUsabilityMatrix.py
cutePrinter/: .gitignore  README.md  cutePrinter.py  requirements.txt
dateConverter/: README.md  main.py  requirements.txt
diaryCutter/: diary.md  diaryCutter.py
dilateErode/: dilateErode.py
drumKitDemo/: PROMPT.md  index.html
evalutionTask_genAi/: .gitignore  Embeddedworld_exhibitors_sw_germany_2026.md  clean_embeddedworld_data.py  cleaned_data.md  companyResearcherPrompt.md  filtered_defense_growth_companies.md  resume.md  task.md
faceRecognitionForFolder/: README.md  main.py  requirements.txt
fileprinter/: fileprinter.py
fixMarkdownLineEnding/: fixMarkdownLineEnding.py  testPoem.md
geoLocViz/: README.md  UT_geoLocViz.py  bundeslaender_germany.md  dont_commit.md  geoLocViz.py  geocache.json  requirements.txt  touristlocations_example.md
gitLogCleaner/: gitLogCleaner.py  gitLogPreparator.py
gitMailmapConsolidator/: gitMailmapConsolidator.py
gitStatsOverTime/: README.md  gitStatsOverTime.py
gitTagTree/: gitTagTree.py  mermaid.txt
githubYearlyOutputScraper/: README.md  githubYearlyOutputScraper.py
hackermanGui/: README.md  hackermanGui.py  requirements.txt
hexFileCompare/: CMakeLists.txt  README.md  main.cpp
hexactlyDifferent/: .coveragerc  .gitignore  README.md  functional_requirements.md  hexactlyDifferent.py  pyproject.toml  sitecustomize.py
hexactlyDifferent/tests/: test_hexactlyDifferent.py
htmlServerInCpp/: CMakeLists.txt  README.md  main.cpp
html_sidebar/: index.htm  script.js  style.css
httpRequestSenderAndReceiverTest/: call-detect_cats.sh  receiver_catProcessor.py  requirements.txt  sender.py
icecreamPriceMapping/: COPYRIGHT  README.md  city_gps_coordinates.csv  cleanData.csv  dataCombiner.py  listGeoCoords.csv  listIcePrices.csv  locationConverter.py  main.py  requirements.txt
islandCounter/: README.md  islandCounter.py
jpg2printablePDF/: .gitignore  README.md  main.py  requirements.txt
kug_checker/: kug_checker.py
labyrinthMaker/: labyrinthMaker.py  labyrinthSolver.py
langchain_summarizer/: langchain_summarizer.py  sample.txt
licenseDistributionCheckBasedOnManifest/: README.md  distribution.md  main.py
linkedinLearningEvaluator/: README.md  accumulation.txt  learningHistory.txt  (+1 more)
minimalLvglProject/: CMakeLists.txt  README.md  localPipeline.sh  lv_conf.h  main.c
ollamaClaudeCodeTest/: CMakeLists.txt  README.md  behavior.c
ollamaClaudeCodeTestRepeated/: CMakeLists.txt  README.md  TASK.md  localPipeline.sh
ollamaClaudeCodeTestRepeated/src/: main.c
(+426 files in other folders)
