[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
parallel = true
source = ["."]
omit = ["tests/*"]
concurrency = ["multiprocessing"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[project.optional-dependencies]
test = [
  "pytest",
  "coverage",
  "pytest-cov",
]
